--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,14 @@ name: Upload Website
 on:
   push:
     branches:
-    - master
+    - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: irineasha/ertest@master
+    - uses: actions/checkout@main
+    - uses: irineasha/ertest@main
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
