--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@master
     - uses: irineasha/ertest@main
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
