--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions-ecosystem/action-bump-semver@v1
         id: bump-semver
         with:
-          current_version: ${{ steps.get-latest-tag.outputs.tag }}.replaceAll("-RC")
+          current_version: ${{ steps.get-latest-tag.outputs.tag.replaceAll("-RC") }}
           level: minor
 
       - uses: actions-ecosystem/action-push-tag@v1
