--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,15 @@ jobs:
       - uses: actions-ecosystem/action-bump-semver@v1
         id: bump-semver
         with:
-          current_version: "${{ steps.get-latest-tag.outputs.tag }}".replaceAll("-RC")
+          current_version: ${{ steps.get-latest-tag.outputs.tag }}
           level: minor
+          
+      - uses: mad9000/actions-find-and-replace-string@2
+        id: replaced-version
+        with:
+          source: ${{ steps.get-latest-tag.outputs.tag }}
+          find: '-RC'        
+          replace: ''
 
       - uses: actions-ecosystem/action-push-tag@v1
         with:
