--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           cond: ${{ steps.replaced-version.outputs.value == '' }}
           if_true: steps.replaced-version.outputs.value = "1.0.1"
-          current_version: ${{ steps.replaced-version.outputs.value }}
+          current_version: "1.0.1" #${{ steps.replaced-version.outputs.value }}
           level: minor
           
       - uses: actions-ecosystem/action-push-tag@v1
