--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,22 +14,14 @@ jobs:
       - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
 
-      - uses: mad9000/actions-find-and-replace-string@2
-        id: replaced-version
+      - id: tag
+        uses: haya14busa/action-cond@v1
         with:
-          source: ${{ steps.get-latest-tag.outputs.tag }}
-          find: '-RC'        
-          replace: ''
-          
-      - uses: actions-ecosystem/action-bump-semver@v1
-        id: bump-semver
-        with:
-          cond: ${{ steps.replaced-version.outputs.value == '' }}
-          if_true: steps.replaced-version.outputs.value = "0.0.1"
-          current_version: "v0.0.1" #${{ steps.replaced-version.outputs.value }}
-          level: minor
-          
+          cond: "${{ steps.get-latest-tag.outputs.tag == '' }}"
+          if_true: "v1.0.1-RC"
+          if_false: "v1.0.2-RC"
+              
       - uses: actions-ecosystem/action-push-tag@v1
         with:
-          tag: ${{ steps.bump-semver.outputs.new_version }}-RC
+          tag: ${{ steps.tag.outputs.value }}-RC
           message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
