--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - id: tag
         uses: haya14busa/action-cond@v1
         with:
-          cond: "${{ steps.get-latest-tag.outputs.tag == null }}"
+          cond: "${{ startsWith(steps.get-latest-tag.outputs.tag, 'v.') }}"
           if_true: "v1.0.1"
           if_false: "v1.0.2"
               
