--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - id: tag
         uses: haya14busa/action-cond@v1
         with:
-          cond: "${{ startsWith(steps.get-latest-tag.outputs.tag, '1.0.1') }}"
+          cond: "${{ startsWith(steps.get-latest-tag.outputs.value, '1.0.1') }}"
           if_true: "v1.0.2"
           if_false: "v1.0.1"
               
