--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,9 @@ jobs:
       - id: tag
         uses: haya14busa/action-cond@v1
         with:
-          cond: "${{ startsWith(steps.get-latest-tag.outputs.value, 'v1.0.1') }}"
+          cond: "'${{steps.get-latest-tag.outputs.tag}}' == 'v1.0.1-RC'"  #cond: "${{ startsWith(steps.get-latest-tag.outputs.tag, 'v1.0.1-RC') }}"   
           if_true: "v1.0.2"
           if_false: "v1.0.1"
-          
-          
               
       - uses: actions-ecosystem/action-push-tag@v1
         with:
