--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,12 @@ on:
   push:
     branches:
       - main
- 
-
+env:
+  PATH: Here Path
 jobs:
   release:
     runs-on: ubuntu-latest
-    env:
-      PATH: Here Path
+    
     outputs:
       output1: ${{ steps.step1.outputs.test }}
       output2: ${{ steps.step2.outputs.test }}
@@ -28,8 +27,8 @@ jobs:
         uses: haya14busa/action-cond@v1
         with:
           cond: "'${{steps.get-latest-tag.outputs.tag}}' == 'v1.0.1-RC'"  #cond: "${{ startsWith(steps.get-latest-tag.outputs.tag, 'v1.0.1-RC') }}"   
-          if_true: $PATH = 'v1.0.2'
-          if_false: $PATH ='v1.0.1'
+          if_true: $PATH = "v1.0.2"
+          if_false: $PATH = "v1.0.1"
               
       - uses: actions-ecosystem/action-push-tag@v1
         with:
