--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
           
       - uses: actions-ecosystem/action-push-tag@v1
         with:
-          tag: $PATH-RC
+          tag: ${{needs.release.outputs.output1}}-RC
           message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
