--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,19 +21,19 @@ jobs:
           echo "${{ steps.get-latest-tag.outputs.tag }}"
 
       - id: step1
+        uses: actions-ecosystem/action-push-tag@v1
         if: ${{ steps.get-latest-tag.outputs.tag == 'v0.0.0' }}
-        run: | 
-            echo 'test=v1.0.1'
+        with:
             tag: "v1.0.1-RC"
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
       - id: step2
+        uses: actions-ecosystem/action-push-tag@v1
         if: ${{ steps.get-latest-tag.outputs.tag == 'v1.0.1-RC' }}
-        run: | 
-            echo 'test=v1.0.2'
+        with:
             tag: "v1.0.2-RC"
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
       - name: Print Values
         run: |
-          echo "${{ needs.jobs.step1.test }}"
-          echo "${{ needs.jobs.step2.test }}"
+          echo "${{ needs.jobs.step1.tag }}"
+          echo "${{ needs.jobs.step2.tag }}"
        
