--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,13 @@ jobs:
         run: |
           echo "${{ steps.get-latest-tag.outputs.tag }}"
 
+      - name: Calc version
+        run: |
+          Number=$(echo { steps.get-latest-tag.outputs.tag } | sed 's/[^0-9]*//g');
+          Number=$((Number + 1));
+          Number=$(echo "v.${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
+          echo "New Version $Number";
+          
       - id: step1
         if: ${{ steps.get-latest-tag.outputs.tag == 'v0.0.0' }}
         uses: actions-ecosystem/action-push-tag@v1
