--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,6 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest 
-    env:
-      Number: "qa"
     steps:
       
       - uses: actions/checkout@v2
@@ -21,10 +19,11 @@ jobs:
 
       - id: newtagname
         run: |
-          env.Number=$(echo ${{ steps.get-latest-tag.outputs.tag }} | sed 's/[^0-9]*//g');
-          env.Number=$((env.Number + 1));
-          env.Number=$(echo "v.${env.Number:0:1}.${env.Number:1:1}.${env.Number:2:2}-RC");
-          echo "${{env.Number}}";
+          Number=$(echo ${{ steps.get-latest-tag.outputs.tag }} | sed 's/[^0-9]*//g');
+          Number=$((Number + 1));
+          Number=$(echo "v.${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
+          echo "${{Number}}";
+          export VersionNumber=${{Number}};
           
       - id: step1
         if: ${{ steps.get-latest-tag.outputs.tag == 'v0.0.0' }}
@@ -36,6 +35,6 @@ jobs:
         if: ${{ steps.get-latest-tag.outputs.tag != 'v0.0.0' }}
         uses: actions-ecosystem/action-push-tag@v1
         with:
-            tag: ${{env.Number}}
+            tag: ${{env.VersionNumber}}
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
  
