--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest 
+    outputs:
+      output1: ${{ steps.newtagname.outputs.test }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions-ecosystem/action-get-latest-tag@v1
@@ -21,7 +23,7 @@ jobs:
           Number=$(echo ${{ steps.get-latest-tag.outputs.tag }} | sed 's/[^0-9]*//g');
           Number=$((Number + 1));
           Number=$(echo "v.${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
-          echo $Number;    
+          echo "test=$Number";    
           
       - id: step1
         if: ${{ steps.get-latest-tag.outputs.tag == 'v0.0.0' }}
@@ -34,6 +36,6 @@ jobs:
         if: ${{ steps.get-latest-tag.outputs.tag != 'v0.0.0' }}
         uses: actions-ecosystem/action-push-tag@v1
         with:
-            tag: ${{ steps.newtagname.outputs.* }}
+            tag: ${{jobs.release.outputs.output1}}
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
  
