--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           Number=$(echo ${{ steps.get-latest-tag.outputs.tag }} | sed 's/[^0-9]*//g');
           Number=$((Number + 1));
-          Number=$(echo "v.${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
+          Number=$(echo "v${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
           echo $Number;    
     
       - id: step2
