--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
       - main
 jobs:
   release:
-  
     runs-on: ubuntu-latest 
     steps:
       - uses: actions/checkout@v2
@@ -36,6 +35,6 @@ jobs:
         if: ${{ steps.get-latest-tag.outputs.tag != 'v0.0.0' }}
         uses: actions-ecosystem/action-push-tag@v1
         with:
-            tag: ${{ steps.tests.outputs.stdout }}
+            tag: ${steps.tests.outputs.value}
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
  
