--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
           Number=$(echo ${{ steps.get-latest-tag.outputs.tag }} | sed 's/[^0-9]*//g');
           Number=$((Number + 1));
           Number=$(echo "v${Number:0:1}.${Number:1:1}.${Number:2:2}-RC");
-          echo $Number;    
+          echo $Number;
+        env:
+          STEPS_CONTEXT: $Number
     
       - id: step2
         if: ${{ steps.get-latest-tag.outputs.tag == 'v0.0.0' }}
@@ -35,6 +37,6 @@ jobs:
         if: ${{ steps.get-latest-tag.outputs.tag != 'v0.0.0' }}
         uses: actions-ecosystem/action-push-tag@v1
         with:
-            tag: ${{ jobs.release.steps.step1.outputs.value }}
+            tag: $STEPS_CONTEXT
             message: '${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}'
  
